--- a/css/colors.css
+++ b/css/colors.css
@@ -1,19 +1,19 @@
-.text-red{
-    color : #ce3f2e;
+.text-red {
+    color: #9c1000;
 }
 
-.bg-red{
-    background-color : #ce3f2e;
+.bg-red {
+    background-color: #ce3f2e;
 }
 
-.text-pink{
-    color : #ffd8d9;
+.text-pink {
+    color: #ffd8d9;
 }
 
-.bg-pink{
-    background-color : #ffd8d9;
+.bg-pink {
+    background-color: #e7c9ca;
 }
 
-.text-orange{
-    color : #f55d42;
+.text-orange {
+    color: #f55d42;
 }
