Minor color change

--- a/css/colors.css
+++ b/css/colors.css
@@ -1,5 +1,5 @@
 .text-red {
-    color: #9c1000;
+    color: #9c3100;
 }
 
 .bg-red {
@@ -11,7 +11,7 @@
 }
 
 .bg-pink {
-    background-color: #e7c9ca;
+    background-color: #f7ded7;
 }
 
 .text-orange {
